force-app/main/default/objects/recruiter_bonus__c/recruiter_bonus__c.object-meta.xml
<CustomObject>
    <label>recruiter bonus</label>
    <nameField>
        <label>recruiter bonus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>recruiter bonuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>