force-app/main/default/objects/recruiter_bonus__c/fields/Candidate_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Start_Date__c</fullName>
    <label>Candidate Start Date</label>
    <type>Date</type>
</CustomField>