force-app/main/default/objects/recruiter_bonus__c/fields/Still_working__c.field-meta.xml
<CustomField>
    <fullName>Still_working__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Still working</label>
    <type>Checkbox</type>
</CustomField>